[package]
name = "kenlm-rs"
version = "0.1.0"
edition = "2021"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = "1.0.78"
autocxx = { version = "0.22.4" }
thiserror = {version = "1.0.37" }

[build-dependencies]
autocxx-build = { version = "0.22.4" }
anyhow = { version = "1.0.65" }

[dev-dependencies]
clap = { version = "4.0.7", features=["derive"] }
anyhow = { version = "1.0.65" }
